--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
 
     "react-bootstrap": "^2.10.6",
 
+    "react-bootstrap-icons": "^1.11.5",
+
     "react-dom": "^19.0.0",
 
     "react-router-dom": "^7.0.2",
